# FManagerQT

./: CMakeLists.txt  FileSystemDelegate.cpp  FileSystemDelegate.h  FileSystemModel.cpp  FileSystemModel.h  example2.txt  mainwindow.cpp  mainwindow.h
